# As-nothing-in-the-wood-no-game-engine-

./: CMakeLists.txt  main.cpp
include/util/: affine.h  camera.h  init.h  input.h  line.h  loadShader.h  loadVertex.h  object.h  struct.h
include/util/struct/: basic.h  entity.h  light.h  line.h  normalEnemy.h  object.h  player.h  soundPoint.h  struct.h
shader/box/: basic.frag  basic.vert
shader/line/: basic.frag  basic.vert
shader/outline/: basic.frag  basic.geom  basic.vert
shader/triangle/: basic.frag
src/: basic.cpp  camera.cpp  entity.cpp  init.cpp  input.cpp  ligh.cpp  line.cpp  loadShader.cpp  loadVertex.cpp  normalEnemy.cpp  object.cpp  player.cpp  soundPoint.cpp  struct.cpp
vertex/: box.vertex  house.vertex  line.vertex  player.vertex
